<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/im_backgroud"
            android:src="@drawable/imag_iniciar"
            android:scaleType="centerCrop"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
             android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"

            android:textColorHint="@color/title_color"
            android:id="@+id/et_email">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/lg_email" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/title_color"
            android:id="@+id/et_password">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/lg_password"
                />
        </android.support.design.widget.TextInputLayout>
             <TextView
                 android:id="@+id/tv_olvidarpassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="@string/lg_olvidar_pass"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"/>

             <Button
                 android:id="@+id/bt_inicar_sesion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/lg_iniciar_sesion"
                 android:textColor="@color/colorPrimaryDark"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="15dp" />


             <TextView
                 android:id="@+id/tv_registrate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/lg_registro"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:gravity="center"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"/>
         </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/im_icon"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_width="150dp"
        android:layout_height="150dp" />
</RelativeLayout>